<resources>
    <string name="app_name">FamBudget</string>
    <string name="description1">Мы за Вас уже создали несколько счетов, где у Вас хранятся средства. Позже вы сможете все настроить. А пока выберите валюту по умолчанию.</string>
    <string name="description2">Помимо этого мы добавили категории расходов, поделив их на разные типы. В будущем Вы можете добавлять, редактировать и удалять. Изначально все категории расходов будут иметь валюту по умолчанию.</string>
    <string name="fambudget">FamBudget</string>
    <string name="etxt_bill_2">Зарплатная карточка</string>
    <string name="etxt_bill_1">Наличные</string>
    <string name="numStart1">0.0</string>
    <string name="numStart2">0.0</string>
    <string name="txtButton">Приступим!</string>
    <string name="title_activity_choose">FamBudget</string>
    <string name="title_add">Поступление</string>
    <string name="title_changeValet">Перевод</string>
    <string name="title_pay">Оплата</string>
    <string name="txtBills">Счета</string>
    <string name="txtCosts">Расходы</string>
    <string name="txt2">Поступление средств на счет:</string>
    <string name="txt2pay">Заплатить со счета:</string>
    <string name="txtPay2">На следующий пункт расхода:</string>
    <string name="txt2change">Перевод средств со счета:</string>
    <string name="txtChange2">На счет:</string>
    <string name="txtDate">Дата:</string>
    <string name="txt4">Валюта:</string>
    <string name="txt5">Курс валюты:</string>
    <string name="txtCurs">TextView</string>
    <string name="btnNo">NO</string>
    <string name="txt3">Сумма:</string>
    <string name="txt2addbill">Название нового счета:</string>
    <string name="txtAddCost">Название новой категории расходов:</string>
    <string name="txtAddCost2">К какому типу расходов будет относится?</string>
    <string name="txtFinPeriodStart">Финансовый период начинается с заданного дня ежемесячно.</string>
    <string name="txtShowValue">Отображать валюту и средства</string>
    <string name="btnOk">Сохранить</string>
    <string name="checkOnlyName">Только название счета</string>
    <string name="ckeckAll">Валюту и средства</string>
    <string name="OnlyNameValue">Только валюту</string>
    <string name="menuResult">Отчет</string>
    <string name="menuSettings">Настройки</string>
    <string name="title_activity_result">activity_result</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="btnshowall">Все</string>
    <string name="btnshowcosts">Расходы</string>
    <string name="btnshowbills">Поступления</string>
    <string name="btndate">по Дате</string>
    <string name="btndatefrom">с Даты</string>
    <string name="btndateto">по Дату</string>
</resources>
